@@ -26,6 +26,8 @@
                 keyboardShortcutsHelp = id; 
                 localPerformFindPanelAction = id; 
                 mailLinkToArticlePage = id; 
+                makeTextLarger = id; 
+                makeTextSmaller = id; 
                 markAllRead = id; 
                 markAllSubscriptionsRead = id; 
                 markFlagged = id; 
@@ -37,6 +39,8 @@
                 nextTab = id; 
                 openWebElementInAlternateBrowser = id; 
                 openWebElementInBrowser = id; 
+                openWebElementInDefaultBrowser = id; 
+                openWebElementInNewTab = id; 
                 openWebLocation = id; 
                 previousTab = id; 
                 printDocument = id; 
@@ -82,6 +86,7 @@
                 foldersTree = FoldersTree; 
                 mainArticleView = ArticleListView; 
                 mainWindow = NSWindow; 
+                newSubscriptionButton = NSButton; 
                 searchField = NSSearchField; 
                 sortByMenu = NSMenuItem; 
                 spinner = NSProgressIndicator; 
