@@ -3,19 +3,19 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>212 88 708 423 0 0 1440 878 </string>
+	<string>265 27 708 423 0 0 1600 1178 </string>
 	<key>IBEditorPositions</key>
 	<dict>
 		<key>1148</key>
 		<string>259 343 719 649 0 0 1280 1002 </string>
 		<key>29</key>
-		<string>244 784 440 44 0 0 1440 878 </string>
+		<string>283 1066 440 44 0 0 1600 1178 </string>
 		<key>738</key>
-		<string>660 527 120 142 0 0 1440 878 </string>
+		<string>740 728 120 142 0 0 1600 1178 </string>
 		<key>860</key>
-		<string>510 530 419 136 0 0 1440 878 </string>
+		<string>590 731 419 136 0 0 1600 1178 </string>
 		<key>971</key>
-		<string>360 217 720 651 0 0 1440 878 </string>
+		<string>440 474 720 651 0 0 1600 1178 </string>
 	</dict>
 	<key>IBFramework Version</key>
 	<string>446.1</string>
@@ -25,12 +25,13 @@
 	<integer>3</integer>
 	<key>IBOpenObjects</key>
 	<array>
+		<integer>21</integer>
 		<integer>738</integer>
-		<integer>29</integer>
 		<integer>971</integer>
 		<integer>860</integer>
+		<integer>29</integer>
 	</array>
 	<key>IBSystem Version</key>
-	<string>8J2135a</string>
+	<string>8L2127</string>
 </dict>
 </plist>
