@@ -28,6 +28,7 @@ Thanks!
 - Support blogging with Pukka.
 - Email page link from browser tab.
 - Don't show dialog when exporting subscriptions by AppleScript.  (Thanks to Darren Kulp.)
+- Added iTunes-like behaviour for add-button. Holding down Option will toggle to "New Smart Folder".
 
 2.1.0.2108
 ----------
